ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uw-api-ingress
  namespace: underwriting
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://uw.sagesure.io, http://localhost:5173, http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-handler-svc
                port:
                  number: 80
